src/tests/testfiles/binary-operator-types-22.txt
Error at 2:5: Binary operator operands must have the same type (have char[] rvalue and float rvalue)
"a" % 4.0;
^
